# Generic-Ass-API

./: .gitignore  Cargo.toml  diesel.toml
migrations/2020-02-16-201828_create_posts/: up.sql
migrations/2020-02-16-204244_create_users/: up.sql
sh/: autoreload.sh
src/: actions.rs  db.rs  lib.rs  main)2.rs  main.rs  main2.rs  models.rs  schema.rs
src/models/: models.rs
