[package]
name = "generic_ass_api"
version = "0.1.0"
authors = ["ryan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"

bytes = "0.5"
diesel = { version = "1.4.3", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.7"
futures = "0.3.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
failure = "0.1.6"
log = "0.4.8"